# msn-model

./: .gitignore  README.md  __init__.py  example_1_build.py  example_2_conductance.py  example_3_bkgnd_noise.py  example_4_modulation.py  example_5_gain.py  example_6_synapse.py  pyproject.toml
examples/: example_1_build.py  example_2_conductance.py  example_3_bkgnd_noise.py  example_4_modulation.py  example_5_gain.py  example_6_synapse.py
msn/: README.md  __init__.py  cell.py  funcs.py  instrumentation.py  modulation.py  params.py
msn/mechanisms/: Im.mod  README.md  ampa.mod  bk.mod  gaba.mod  nmda.mod
msn/parameters/: conductances.tsv
src/msnmodel/: __init__.py  cell.py  instrumentation.py  modulation.py  params.py
src/msnmodel/mechanisms/: README.md  ampa.mod  bk.mod  km.mod  nmda.mod
src/msnmodel/parameters/: conductances.csv
