[project]
name = "msnmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "neuron>=8.2.6",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pyside6>=6.9.0",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 72